--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.input :first_name %>
     <%= f.input :last_name %>
     <%= f.input :hours %>
+    <%= f.input :public, label: 'Fonctionnaire' %>
     <%= f.input :tenured, label: 'Titulaire' %>
     <%= f.input :teaching_modules, as: :check_boxes, label: 'Responsable des modules' %>
     <%= f.input :projects, as: :check_boxes, label: 'Impliqué(e) dans les projets' %>
