--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th style="min-width: 200px">Nom</th>
+      <th>Fonctionnaire ?</th>
       <th>Responsable des modules</th>
       <th>Champs</th>
       <th>Projets</th>
@@ -19,6 +20,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user, user %></td>
+        <td><%= user.public ? 'oui' : 'non' %></td>
         <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: user.teaching_modules} %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: user.fields} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: user.projects} %></td>
