--- a/app/views/teaching_modules/costs.html.erb
+++ b/app/views/teaching_modules/costs.html.erb
@@ -46,6 +46,8 @@
         <th>Coût TD</th>
         <th>Coût TP</th>
         <th>Coût total</th>
+        <th>Heures étudiant PPN</th>
+        <th>Coût / heure étudiant</th>
       </tr>
     </thead>
     <tbody>
@@ -56,6 +58,8 @@
           <td><%= teaching_module.planned_teacher_hours_td_costs.round %>€</td>
           <td><%= teaching_module.planned_teacher_hours_tp_costs.round %>€</td>
           <td><%= teaching_module.planned_teacher_hours_costs.round %>€</td>
+          <td><%= teaching_module.expected_student_hours %></td>
+          <td><%= teaching_module.cost_per_student_hour %>€</td>
         </tr>
       <% end %>
     </tbody>
