--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @user %></h1>
 
 <%= render 'form' %>
+<br/>
+<%= link_to 'Supprimer cet utilisateur', user_path(@user), method: :delete, data: {confirm: "Sûr?"}  %>
+<br/>
