--- a/app/views/teaching_modules/_show.html.erb
+++ b/app/views/teaching_modules/_show.html.erb
@@ -1,65 +1,80 @@
-<h2>En bref</h2>
-<ul class="list">
-  <li>Unité : <%= link_to @teaching_module.teaching_unit, @teaching_module.teaching_unit %></li>
-  <li>Semestre : <%= link_to @teaching_module.semester, @teaching_module.semester %></li>
-  <li>Semestre : Catégorie : <%= link_to @teaching_module.teaching_category, @teaching_module.teaching_category %></li>
-  <li>Sujet : <%= link_to @teaching_module.teaching_subject, @teaching_module.teaching_subject %></li>
-  <li>Durée : <%= @teaching_module.hours %> heures</li>
-  <li>Coefficient : <%= @teaching_module.coefficient %></li>
-  <% unless @teaching_module.user.nil? %>
-    <li>Responsable : <%= link_to @teaching_module.user, @teaching_module.user %></li>
-  <% end %>
-</ul>
-
-<h2>Contenus</h2>
-<p><%= @teaching_module.content %></p>
-
-<h2>Objectifs</h2>
-<p>
-  <ul>
-    <% @teaching_module.objectives.each do |objective| %>
-      <li><%= link_to objective, objective %></li>
-    <% end %>
-  </ul>
-</p>
-
-<h2>Modalités de mise en œuvre</h2>
-<p><%= @teaching_module.how_to %></p>
-
-<h2>Prolongements possibles</h2>
-<p><%= @teaching_module.what_next %></p>
-
-<h2>Mots-clés</h2>
-<%= render partial: 'keywords/inline_list', locals: {keywords: @teaching_module.keywords} %>
+<div class="row">
+  <div class="col-md-4">
+    <h2>En bref</h2>
+    <ul class="list">
+      <li>Unité : <%= link_to @teaching_module.teaching_unit, @teaching_module.teaching_unit %></li>
+      <li>Semestre : <%= link_to @teaching_module.semester, @teaching_module.semester %></li>
+      <li>Semestre : Catégorie : <%= link_to @teaching_module.teaching_category, @teaching_module.teaching_category %></li>
+      <li>Sujet : <%= link_to @teaching_module.teaching_subject, @teaching_module.teaching_subject %></li>
+      <li>Durée : <%= @teaching_module.hours %> heures</li>
+      <li>Coefficient : <%= @teaching_module.coefficient %></li>
+      <% unless @teaching_module.user.nil? %>
+        <li>Responsable : <%= link_to @teaching_module.user, @teaching_module.user %></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <h2>Contenus</h2>
+    <p><%= @teaching_module.content %></p>
+  </div>  
+  <div class="col-md-4">
+    <h2>Objectifs</h2>
+    <p>
+      <ul>
+        <% @teaching_module.objectives.each do |objective| %>
+          <li><%= link_to objective, objective %></li>
+        <% end %>
+      </ul>
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h2>Modalités de mise en œuvre</h2>
+    <p><%= @teaching_module.how_to %></p>
+  </div>  
+  <div class="col-md-4">
+    <h2>Prolongements possibles</h2>
+    <p><%= @teaching_module.what_next %></p>
+  </div>  
+  <div class="col-md-4">
+    <h2>Mots-clés</h2>
+    <%= render partial: 'keywords/inline_list', locals: {keywords: @teaching_module.keywords} %>
+  </div>
+</div>
 
 <h2>Heures</h2>
 <div id="hours"></div></td>
-  <script type="text/javascript">
-    $(function () {
-      $('#hours').highcharts({
-          chart: { type: 'bar', height: 150 },
-          title: null,
-          xAxis: { categories: ['PPN', 'Planifié'], tickWidth: 0 },
-          yAxis: { min: 0, title: null },
-          tooltip: { backgroundColor: 'white', valueSuffix: ' heures' },
-          plotOptions: { series: { stacking: 'normal', dataLabels: { enabled: false } } },
-          legend: { enabled: false },
-          credits: { enabled: false },
-          series: [
-            { name: 'TP', data: [<%= @teaching_module.hours_tp %>, <%= @teaching_module.planned_student_hours_tp %>] }, 
-            { name: 'TD', data: [<%= @teaching_module.hours_td %>, <%= @teaching_module.planned_student_hours_td %>] }, 
-            { name: 'CM', data: [<%= @teaching_module.hours_cm %>, <%= @teaching_module.planned_student_hours_cm %>] }
-            ]
-      });
-  });
-  </script>
-
+<script type="text/javascript">
+  $(function () {
+    $('#hours').highcharts({
+        chart: { type: 'bar', height: 150 },
+        title: null,
+        xAxis: { categories: ['PPN', 'Planifié'], tickWidth: 0 },
+        yAxis: { min: 0, title: null },
+        tooltip: { backgroundColor: 'white', valueSuffix: ' heures' },
+        plotOptions: { series: { stacking: 'normal', dataLabels: { enabled: false } } },
+        legend: { enabled: false },
+        credits: { enabled: false },
+        series: [
+          { name: 'TP', data: [<%= @teaching_module.hours_tp %>, <%= @teaching_module.planned_student_hours_tp %>] }, 
+          { name: 'TD', data: [<%= @teaching_module.hours_td %>, <%= @teaching_module.planned_student_hours_td %>] }, 
+          { name: 'CM', data: [<%= @teaching_module.hours_cm %>, <%= @teaching_module.planned_student_hours_cm %>] }
+          ]
+    });
+});
+</script>
 <p><%= @teaching_module.student_hours %>h étudiant / <%= @teaching_module.hours %>h prévues au PPN</p>
 <%= link_to 'Planifier une personne', new_involvement_path(teaching_module_id: @teaching_module.id) %>
 <%= render partial: 'involvements/table', locals: {involvements: @teaching_module.involvements} %>
 
-<h2>Champs</h2>
-<%= render partial: 'fields/inline_list', locals: {fields: @teaching_module.fields} %>
-
-<h2>Projets</h2>
-<%= render partial: 'projects/inline_list', locals: {projects: @teaching_module.projects} %>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Champs</h2>
+    <%= render partial: 'fields/inline_list', locals: {fields: @teaching_module.fields} %>
+  </div>
+  <div class="col-md-6">
+    <h2>Projets</h2>
+    <%= render partial: 'projects/inline_list', locals: {projects: @teaching_module.projects} %>
+  </div>
+</div>
