--- a/app/views/teaching_modules/show.html.erb
+++ b/app/views/teaching_modules/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %><%= @teaching_module.full_name %><% end %>
 <h1><%= @teaching_module.full_name %></h1>
 <%= link_to 'Edit', edit_teaching_module_path(@teaching_module) %>
 
