--- a/app/views/users/summary.html.erb
+++ b/app/views/users/summary.html.erb
@@ -1,4 +1,5 @@
-<h1>Récapitulatif</h1>
+<% content_for :title, 'Services' %>
+<h1>Services</h1>
 <table class="table table-hover">
   <tbody>
     <tr>
