--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -1,17 +1,21 @@
 <%= semantic_form_for @involvement do |f| %>
   <%= f.inputs do %>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <%= f.input :teaching_module, label: 'Module' %>
         <%= f.input :user, label: 'Personne' %>
         <%= f.input :description, input_html: { rows: 3 } %>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-8">
         <%= f.input :hours_cm, label: 'Heures de cours magistraux (CM)' %>
-        <%= f.input :hours_td, label: 'Heures de travaux dirigés (TD)' %>
-        <%= f.input :multiplier_td, label: 'Groupes concernés par les heures de TD' %>
-        <%= f.input :hours_tp, label: 'Heures de travaux pratiques (TP)' %>
-        <%= f.input :multiplier_tp, label: 'Groupes concernés par les heures de TP' %>
+        <div class="row">
+          <div class="col-md-6"><%= f.input :hours_td, label: 'Heures de travaux dirigés (TD)' %></div>
+          <div class="col-md-6"><%= f.input :multiplier_td, label: 'Groupes concernés par les heures de TD' %></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6"><%= f.input :hours_tp, label: 'Heures de travaux pratiques (TP)' %></div>
+          <div class="col-md-6"><%= f.input :multiplier_tp, label: 'Groupes concernés par les heures de TP' %></div>
+        </div>
         <p>Toutes les heures sont en heures étudiants</p>
       </div>
     </div>
