--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -1,6 +1,5 @@
-<p id="notice"><%= notice %></p>
-
-<h1><%= @semesters.count %> semestres</h1>
+<% content_for :title, "Semestres" %>
+<h1>Semestres</h1>
 
 <table class="table table-hover">
   <thead>
