--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -4,6 +4,7 @@
       <div class="col-md-4">
         <%= f.input :teaching_module, label: 'Module' %>
         <%= f.input :user, label: 'Personne' %>
+        <%= f.input :project, label: 'Projet' %>
         <%= f.input :description, input_html: { rows: 3 } %>
       </div>
       <div class="col-md-8">
