--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,6 +1,10 @@
 @import bootstrap-sprockets
 @import bootstrap
 @import font-awesome
+@import url('https://fonts.googleapis.com/css?family=Mukta+Malar:400,700')
+
+*
+  font-family: 'Mukta Malar', sans-serif
 
 ul 
   list-style-type: none
@@ -14,7 +18,7 @@ ul
   font-weight: bold
   .navbar-nav > li > a
     color: white
-    font-size: 12px
+    font-size: 13px
 
 .abstract 
   background: #eee
@@ -61,7 +65,7 @@ ul
   color: white
   margin-top: -100px
   text-align: center
-  padding: 150px 0 100px
+  padding: 150px 50px 100px
   background-size: cover
   background-attachment: fixed
   background-image: asset-url('headers/default.jpg')
