--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,6 +19,8 @@ ul
   .navbar-nav > li > a
     color: white
     font-size: 13px
+    &:hover
+      color: #eee
 
 .abstract 
   background: #eee
