--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,10 +1,10 @@
 @import bootstrap-sprockets
 @import bootstrap
 @import font-awesome
-@import url('https://fonts.googleapis.com/css?family=Mukta+Malar:400,700')
+@import url('https://fonts.googleapis.com/css?family=Mukta:400,700')
 
 *
-  font-family: 'Mukta Malar', sans-serif
+  font-family: 'Mukta', sans-serif
 
 ul 
   list-style-type: none
