--- a/app/views/semesters/_inline_list.html.erb
+++ b/app/views/semesters/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% semesters.each do |semester| %>
-    <li><%= link_to semester, semester %></li>
+    <li><%= link_to semester, semester, class: 'btn btn-primary btn-xs' %></li>
   <% end %>
 </ul>
