--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -5,6 +5,8 @@
 
 *
   font-family: 'Mukta', sans-serif
+  text-rendering: optimizeSpeed
+  font-variant-ligatures: common-ligatures
 
 ul 
   list-style-type: none
