inline lists appearance

--- a/app/views/fields/_inline_list.html.erb
+++ b/app/views/fields/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% fields.each do |field| %>
-    <li><%= link_to field, field, class: 'btn btn-primary btn-xs' %></li>
+    <li><%= link_to field, field, class: 'btn btn-default btn-xs' %></li>
   <% end %>
 </ul>
