--- a/app/views/involvements/_inline_list.html.erb
+++ b/app/views/involvements/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% involvements.each do |involvement| %>
-    <li><%= link_to involvement, edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' %></li>
+    <li><%= link_to involvement, edit_involvement_path(involvement), class: 'btn btn-default btn-xs' %></li>
   <% end %>
 </ul>
