--- a/app/views/projects/_inline_list.html.erb
+++ b/app/views/projects/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% projects.each do |project| %>
-    <li><%= link_to project, project, class: 'btn btn-primary btn-xs' %></li>
+    <li><%= link_to project, project, class: 'btn btn-default btn-xs' %></li>
   <% end %>
 </ul>
