--- a/app/views/users/costs.html.erb
+++ b/app/views/users/costs.html.erb
@@ -1,4 +1,6 @@
 <h1>Récapitulatif</h1>
+<%#= bar_chart @users.sum(&:teacher_hours_costs) %>
+
 <table class="table table-hover">
   <thead>
     <tr>
