--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,10 +1,12 @@
 @import bootstrap-sprockets
 @import bootstrap
 @import font-awesome
-@import url('https://fonts.googleapis.com/css?family=Mukta:400,700')
+@import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,700')
 
 *
   font-family: 'Mukta', sans-serif
+  font-weight: 300
+  text-rendering: optimizeLegibility
 
 ul 
   list-style-type: none
@@ -15,10 +17,10 @@ ul
   background: none
   border: none
   text-transform: uppercase
-  font-weight: bold
   .navbar-nav > li > a
     color: white
     font-size: 13px
+    font-weight: 700
     &:hover
       color: #eee
 
@@ -31,10 +33,19 @@ ul
   height: 660px
   margin: 0 auto
 
-.logo img
-  margin-top: -35px
-  margin-left: -25px
-  height: 90px
+.logo 
+  img
+    margin-top: -35px
+    margin-left: -25px
+    height: 90px
+    float: left
+  p
+    color: white
+    float: right
+    letter-spacing: 2px
+    font-weight: 200
+    font-size: 23px
+    margin-top: -1px
 
 .list-inline li
   padding-bottom: 10px
@@ -56,25 +67,42 @@ ul
         margin-bottom: 5px
         background: black
 
-.hours-warning 
-  background: red
-.hours-below 
-  background: red
-.hours-above 
-  background: orange
-
 .jumbotron
   color: white
   margin-top: -100px
   text-align: center
-  padding: 150px 50px 100px
+  padding: 150px 50px 130px
   background-size: cover
   background-attachment: fixed
   background-image: asset-url('headers/default.jpg')
   background-position: center
+  position: relative
+  z-index: 0
+  &:before
+    content: ''
+    position: absolute
+    z-index: -1
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    background-image: linear-gradient(to bottom, black, transparent)
+    opacity: .5
   &.projects
     background-image: asset-url('headers/projects.jpg')
   &.teaching_modules
     background-image: asset-url('headers/teaching_modules.jpg')
   &.users
     background-image: asset-url('headers/users.jpg')
+
+footer
+  font-size: 10px
+  text-align: center
+  margin: 60px 0
+  color: #ccc
+  &:before
+    content: ''
+    display: block
+    margin: 0 auto 30px auto
+    width: 100px
+    border-top: 1px solid #ccc
