--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,35 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to image_tag('mmi-bordeaux.png'), root_path, class:'navbar-brand logo' %> 
+        <%= link_to root_path, class:'navbar-brand logo' do %>
+          <%= image_tag 'mmi-bordeaux.png' %>
+          <p>Admin</p>
+        <% end %> 
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to 'Champs', fields_path %></li>
-            <li><%= link_to 'Projets', projects_path %></li>
-            <li><%= link_to 'Equipe', users_path %></li>
-            <li><%= link_to 'Maquette', teaching_modules_summary_path %></li>
-            <li><%= link_to 'Services', users_summary_path %></li>
+            <li><%= link_to 'Admin', root_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pédagogie <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Maquette', teaching_modules_summary_path %></li>
+                <li><%= link_to 'Champs', fields_path %></li>
+                <li><%= link_to 'Projets', projects_path %></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Equipe <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Intervenants', users_path %></li>
+                <li><%= link_to 'Services', users_summary_path %></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Budget <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Intervenants', users_costs_path %></li>
+                <li><%= link_to 'Modules', teaching_modules_costs_path %></li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -44,11 +65,15 @@
       </div>
     </div>
     <div class="jumbotron <%= controller_name %>">
-      <h1><%= @title %></h1>
+      <div>
+        <h1><%= @title %></h1>
+        <% if @subtitle.present? %><p><%= @subtitle %></p><% end %>
+      </div>
     </div>
     <div class="container">
       <%= bootstrap_flash %>
       <%= yield %>
     </div>
+    <%= render 'application/footer' %>
   </body>
 </html>
