--- a/app/views/teaching_modules/_show.html.erb
+++ b/app/views/teaching_modules/_show.html.erb
@@ -1,3 +1,23 @@
+<div class="row">
+  <div class="col-md-3">
+    <div class="btn btn-block btn-default">
+      <h2>Maquette <%= @teaching_module.planned_student_hours.round %></h2>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="btn btn-block btn-default">
+      <h2>PPN <%= @teaching_module.expected_student_hours.round %></h2>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="btn btn-block btn-<%= @teaching_module.student_hours_delta < 0 ? 'danger' : 'success' %>">
+      <h2>Delta <%= @teaching_module.student_hours_delta.round %>%</h2>
+    </div>
+  </div>
+</div>
+
+<hr/>
+
 <h2>Heures</h2>
 <div id="hours"></div></td>
 <script type="text/javascript">
