--- a/app/views/teaching_modules/_show.html.erb
+++ b/app/views/teaching_modules/_show.html.erb
@@ -39,7 +39,6 @@
     });
 });
 </script>
-<p><%= @teaching_module.student_hours %>h étudiant / <%= @teaching_module.hours %>h prévues au PPN</p>
 <%= link_to 'Planifier une personne', new_involvement_path(teaching_module_id: @teaching_module.id) %>
 <table class="table">
   <thead>
@@ -64,7 +63,7 @@
       <td><%= involvement.hours_td %> <span class="label label-default">x <%= involvement.multiplier_td %></span></td>
       <td><%= involvement.hours_tp %> <span class="label label-default">x <%= involvement.multiplier_tp %> / <%= involvement.groups_tp %></span></td>
       <td><%= involvement.teacher_hours %></td>
-      <td><%= simple_format involvement.description %></td>
+      <td style="max-width: 200px"><%= simple_format involvement.description %></td>
       <td><%= link_to involvement.project, involvement.project unless involvement.project.nil? %></td>
       <td><%= link_to 'Edit', edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' %></td>
     </tr>
