--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,6 +2,7 @@
 @import bootstrap
 @import font-awesome
 @import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,700')
+@import devise_bootstrap_views
 
 *
   font-family: 'Mukta', sans-serif
@@ -34,9 +35,15 @@ ul
   margin: 0 auto
 
 .logo 
+  display: block
+  height: 80px
+  width: 200px
+  padding: 15px
+  line-height: 20px
   img
-    margin-top: -35px
+    margin-top: -30px
     margin-left: -25px
+    margin-right: -25px
     height: 90px
     float: left
   p
@@ -45,7 +52,8 @@ ul
     letter-spacing: 2px
     font-weight: 200
     font-size: 23px
-    margin-top: -1px
+    margin-top: 4px
+    text-transform: uppercase
 
 .list-inline li
   padding-bottom: 10px
@@ -94,6 +102,19 @@ ul
     background-image: asset-url('headers/teaching_modules.jpg')
   &.users
     background-image: asset-url('headers/users.jpg')
+
+body.devise
+  background-size: cover
+  background-attachment: fixed
+  background-image: asset-url('headers/default.jpg')
+  background-position: center
+  .logo
+    margin: 50px auto
+    filter: brightness(0)
+  footer
+    color: black
+    &:before
+      border-color: black
 
 footer
   font-size: 10px
